--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <nav class="bg-pink-200">
     <div class="container mx-auto">
         <div class="flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold text-black-900">Our Wedding</a>
+            <a href="#" class="text-2xl font-bold text-black-900">&nbsp;&nbsp;&nbsp;&nbsp;Our Wedding</a>
             <ul class="space-x-2 md:space-x-4">
                 <li><a href="#about" class="text-black-600 hover:text-white"><strong>About Us</strong></a></li>
                 <li><a href="#events" class="text-black-600 hover:text-white"><strong>Events</strong></a></li>
@@ -87,7 +87,7 @@
     <div class="container mx-auto text-center">
         <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold mb-4">Join us on our special day</h1>
         <p class="text-lg md:text-xl">Save the date for the wedding of</p>
-        <p class="text-3xl md:text-4xl font-bold">Mohammad Gous&nbsp;&nbsp;&nbsp;&nbsp;Sarwat Jahan</p>
+        <p class="text-3xl md:text-4xl font-bold">Mohammad Gous & Sarwat Jahan</p>
         <p class="text-lg md:text-xl">Oct 30, 2023</p>
     </div>
 </section>
